# haptgp

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
calibrations/: light.1764256686.csv
exemples/: bme280.py  buzzer.py  enco.py  gc9a01a.py  haptic.py  leds.py  light.py  rtc.py  screen.py  screen_virt.py  touch.py  veml7700.py
haptgp/doc/class_material/: Identification_Fils.xlsx
haptgp/exemples/: buzzer.py  screen.py  touch.py
haptgp/scripts/: startup_connection.py  sync.py
haptgp/src/: calibrations.py  cmdl.py  sensors.py
scripts/: dvr_id.py  startup_connection.py
src/: app.py  calib.py  config.py  main.py  sensors.py  views.py
